添加转码单元测试